<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EFI_Demo_App</string>
    <string name="title_section1">Current Jobs</string>
    <string name="title_section2">List</string>
    <string name="title_section3">Printing Queue</string>
    <string name="title_section4">General Settings</string>
    <string name="title_section5">Ink Settings</string>
    <string name="title_section6">Fax</string>
    <string name="title_section7">Network</string>
    <string name="title_section8">Print Reports</string>
    <string name="title_section9">Machine Info</string>
    <string name="title_section10">Initial Setup</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Cancel Job</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="tv_select_action">Welcome</string>
    <string name="button_black_copy">Black Copy</string>
    <string name="button_color_copy">Color Copy</string>
    <string name="button_scan">Scan</string>
    
    <string name="tv_black_ink_level">Black Ink Level</string>
    <string name="tv_color_ink_level">Color Ink Level</string>
    
    <string name="tv_tray_select">Select Tray</string>
    <string name="tv_tray_select_1">Tray # 1</string>
    <string name="tv_tray_select_2">Tray # 2</string>
    <string name="tv_tray_select_3">Tray # 3</string>
    
    <string name="tv_quantity_copies">Number of Copies</string>
    <string name="button_start">Start</string>
    
    <string name="welcome_message">Welcome to Network Connect!
        Click FETCH to fetch the first 500 characters of raw HTML from www.google.com.
    </string>

    <string name="fetch_text">Fetch</string>
    <string name="clear_text">Clear</string>
    <string name="connection_error">Connection error.</string>
    
    <string name="intro_message">
        <![CDATA[
        
            
            This sample demonstrates how to connect to the network and fetch raw HTML using
            HttpURLConnection. AsyncTask is used to perform the fetch on a background thread.
            
        
        ]]>
    </string>

</resources>
