<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ssk.project.studiodemo.MainActivity$SoundFragment" >

    <TextView
        android:id="@+id/soundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_black_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_black_copy"/>

    <Button
        android:id="@+id/button_color_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_color_copy" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scan" />
    
    <TextView
        android:id="@+id/tv_black_ink_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_black_ink_level" />

    <ProgressBar
        android:id="@+id/progress_bar_black_ink"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/progress_bar_black_ink_coloring"
        android:progress="73"
        android:secondaryProgress="100" />
    
    <TextView
        android:id="@+id/tv_color_ink_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_color_ink_level" />

    <ProgressBar
        android:id="@+id/progress_bar_color_ink"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/progress_bar_color_ink_coloring"
        android:progress="43"
        android:secondaryProgress="100" />

</LinearLayout>
